# ml

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  error.h  evaluation.c  evaluation.h  ml.c  ml.h  mpc.c
src/: builtin.c  builtin.h  error.c  evaluation.c  evaluation.h  ml.c  ml.h  parsing.c  parsing.h
