SET(CMAKE_C_COMPILER clang)
SET(CMAKE_CXX_COMPILER clang++)
PROJECT(ml)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(ml ${DIR_SRCS})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${DIR_SRCS}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${DIR_SRCS}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${DIR_SRCS}/bin)
